[Refactor] 차단 유저 액세스 관리